policy/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow privileged containers
    policies.kyverno.io/severity: high
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/description: >-
      Privileged containers share the host kernel and can escape to the node.
      Cluster-wide, no container may set securityContext.privileged: true.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: disallow-privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Privileged containers are not allowed. securityContext.privileged must be unset or false."
        pattern:
          spec:
            =(ephemeralContainers):
              - =(securityContext):
                  =(privileged): "false"
            =(initContainers):
              - =(securityContext):
                  =(privileged): "false"
            containers:
              - =(securityContext):
                  =(privileged): "false"
